11 remove extract (#15)
* removed extract from code

* updated API

* updated version
